Add ghidra script for labeling dumped functions.

--- a/MF.Toolkit.Reloaded/MF.Toolkit.Reloaded.csproj
+++ b/MF.Toolkit.Reloaded/MF.Toolkit.Reloaded.csproj
@@ -40,6 +40,9 @@
     <None Update="Preview.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="Scripts\metaphor-functions.py">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
   <ItemGroup>
