--- a/.github/workflows/reloaded.yml
+++ b/.github/workflows/reloaded.yml
@@ -88,7 +88,7 @@ jobs:
         run: Copy-Item -Force -Path "${{ env.PROJECT_DIR }}/Publish/*" -Destination "./Publish" -Recurse
 
       - name: Upload GitHub Release Artifact
-        uses: actions/upload-artifact@4
+        uses: actions/upload-artifact@v4
         with:
           # Artifact name
           name: GitHub Release
@@ -97,7 +97,7 @@ jobs:
             ${{ env.PUBLISH_GITHUB_PATH }}/*
 
       - name: Upload GameBanana Release Artifact
-        uses: actions/upload-artifact@4
+        uses: actions/upload-artifact@v4
         with:
           # Artifact name
           name: GameBanana Release
@@ -106,7 +106,7 @@ jobs:
             ${{ env.PUBLISH_GAMEBANANA_PATH }}/*
 
       - name: Upload Changelog Artifact
-        uses: actions/upload-artifact@4
+        uses: actions/upload-artifact@v4
         with:
           # Artifact name
           name: Changelog
