--- a/MF.Toolkit.Reloaded/MF.Toolkit.Reloaded.csproj
+++ b/MF.Toolkit.Reloaded/MF.Toolkit.Reloaded.csproj
@@ -51,6 +51,7 @@
     <PackageReference Include="RyoTune.Reloaded" Version="1.0.1" />
     <PackageReference Include="Reloaded.Memory.SigScan.ReloadedII.Interfaces" Version="1.2.0" />
     <PackageReference Include="SharedScans.Interfaces" Version="1.2.0" />
+    <PackageReference Include="Superpower" Version="3.0.0" />
   </ItemGroup>
 
   <ItemGroup>
