--- a/MF.Toolkit.Reloaded/MF.Toolkit.Reloaded.csproj
+++ b/MF.Toolkit.Reloaded/MF.Toolkit.Reloaded.csproj
@@ -46,6 +46,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="CriFs.V2.Hook.Interfaces" Version="1.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="8.0.1" />
     <PackageReference Include="Reloaded.Mod.Interfaces" Version="2.4.0" ExcludeAssets="runtime" />
     <PackageReference Include="Reloaded.SharedLib.Hooks" Version="1.9.0" />
     <PackageReference Include="RyoTune.Reloaded" Version="1.0.1" />
@@ -56,6 +58,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\MF.Toolkit.Interfaces\MF.Toolkit.Interfaces.csproj" />
+    <ProjectReference Include="..\submodules\CNutSharp\CNutSharp.Library\CNutSharp.Library.csproj" />
   </ItemGroup>
 
 </Project>
