--- a/MF.Toolkit.Reloaded/ModConfig.json
+++ b/MF.Toolkit.Reloaded/ModConfig.json
@@ -16,27 +16,16 @@
   "IsLibrary": false,
   "ReleaseMetadataFileName": "MF.Toolkit.Reloaded.ReleaseMetadata.json",
   "PluginData": {
-    "GameBananaDependencies": {
-      "IdToConfigMap": {
-        "SharedScans.Reloaded": {
-          "Config": {
-            "ItemType": "Mod",
-            "ItemId": 495507
-          },
-          "ReleaseMetadataName": "SharedScans.Reloaded.ReleaseMetadata.json"
-        }
-      }
-    },
     "GitHubDependencies": {
       "IdToConfigMap": {
-        "reloaded.sharedlib.hooks": {
+        "crifs.v2.hook": {
           "Config": {
             "UserName": "Sewer56",
-            "RepositoryName": "Reloaded.SharedLib.Hooks.ReloadedII",
-            "UseReleaseTag": true,
-            "AssetFileName": "reloaded.sharedlib.hooks.zip"
+            "RepositoryName": "CriFs.V2.Hook.ReloadedII",
+            "UseReleaseTag": false,
+            "AssetFileName": "Mod.zip"
           },
-          "ReleaseMetadataName": "Sewer56.Update.ReleaseMetadata.json"
+          "ReleaseMetadataName": "CriFs.V2.Hook.ReleaseMetadata.json"
         },
         "Reloaded.Memory.SigScan.ReloadedII": {
           "Config": {
@@ -47,20 +36,31 @@
           },
           "ReleaseMetadataName": "Reloaded.Memory.SigScan.ReloadedII.ReleaseMetadata.json"
         },
-        "crifs.v2.hook": {
+        "reloaded.sharedlib.hooks": {
           "Config": {
             "UserName": "Sewer56",
-            "RepositoryName": "CriFs.V2.Hook.ReloadedII",
+            "RepositoryName": "Reloaded.SharedLib.Hooks.ReloadedII",
+            "UseReleaseTag": true,
+            "AssetFileName": "reloaded.sharedlib.hooks.zip"
+          },
+          "ReleaseMetadataName": "Sewer56.Update.ReleaseMetadata.json"
+        },
+        "SharedScans.Reloaded": {
+          "Config": {
+            "UserName": "RyoTune",
+            "RepositoryName": "SharedScans",
             "UseReleaseTag": false,
             "AssetFileName": "Mod.zip"
           },
-          "ReleaseMetadataName": "CriFs.V2.Hook.ReleaseMetadata.json"
+          "ReleaseMetadataName": "SharedScans.Reloaded.ReleaseMetadata.json"
         }
       }
     },
-    "GameBanana": {
-      "ItemType": "Mod",
-      "ItemId": 548487
+    "GitHubRelease": {
+      "UserName": "RyoTune",
+      "RepositoryName": "MF.Toolkit",
+      "UseReleaseTag": false,
+      "AssetFileName": "Mod.zip"
     }
   },
   "IsUniversalMod": false,
